# advent-of-code-2022

./: .gitignore  Cargo.toml  README.md  bun.lockb  get-client.ts  go.mod  package-lock.json  package.json  pyproject.toml  tsconfig.json
1/: index.ts  index2.ts
10/: sln.py  sln2.py
11/: main.rs  parser.py  parser2.py  sln.py  sln2.py
12/: sln.py  sln2.py
13/: parser.py  sln.py  sln2.py
14/: sln.py  sln2.py
15/: sln.py
16/: sln.py  sln2.py
17/: sln.py
18/: sln.py  sln2.py
2/: index.ts  index2.ts
20/: sln.py
25/: sln.py
3/: index.ts  index2.ts
4/: index.ts  index2.ts
5/: index.ts  index2.ts  parser.ts
6/: index.ts  index2.ts
7/: index.ts  index2.ts
8/: index.ts  index2.ts
9/: index.ts  index2.ts  sln.go  sln.py
benchmarking/: benchmark-mapreduce.py  benchmark-sort.ts  benchmark-sum.ts
src/: main.rs
utils/: utils.go  utils.py  utils.ts
